# molecular-gfx

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/humanhead/: CMakeLists.txt  HumanHeadExampleMain.cpp
examples/humanhead/assets/: contents.txt
examples/humanhead/assets/nv/: .gitignore  README.md
examples/humanhead/assets/shaderdata/: default.txt  skin.txt
molecular/: Config.h.in
molecular/gfx/: AssetManager.h  BufferInfo.h  CharacterAnimation.cpp  CharacterAnimation.h  DefaultProgramData.cpp  DefaultProgramData.h  DrawText.cpp  DrawText.h  GfxContext.h  GfxFile.cpp  GfxFile.h  GfxUtils.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  MeshBoundsCollectionFile.h  MeshDataSource.h  MeshLoader.cpp  MeshLoader.h  MeshLocator.h  MeshManager.cpp  MeshManager.h  NmbMeshDataSource.cpp  NmbMeshDataSource.h  NodeFactory.h  Picking.h  ProgramProvider.cpp  ProgramProvider.h  RenderCmdSink.h  RenderContext.h  RenderFunction.cpp  RenderFunction.h  RenderManager.h  Scope.h  Scoping.h  SkinProgramData.cpp  SkinProgramData.h  TetrahedronInterpolation.cpp  TetrahedronInterpolation.h  (+8 more)
molecular/gfx/functions/: ApplyTextures.cpp  ApplyTextures.h  CascadedShadowMapping.cpp  CascadedShadowMapping.h  CpuParticleSystem.h  CpuParticleSystemImpl.h  Demultiplexer.cpp  Demultiplexer.h  DrawDebugMesh.h  DrawMesh.h  DrawMeshData.cpp  DrawMeshData.h  DrawSkyDome.h  DrawTerrain.cpp  DrawTerrain.h  DrawTestSkeleton.cpp  DrawTestSkeleton.h  DrawingFunction.h  FlatScene.cpp  FlatScene.h  FullscreenEffect.cpp  FullscreenEffect.h  Group.cpp  Group.h  HumanSkin.cpp  HumanSkin.h  ParticleSystem.cpp  ParticleSystem.h  PortalZoneScene.h  PortalZoneSceneImpl.h  RTreeScene.cpp  RTreeScene.h  RequestOutput.cpp  RequestOutput.h  SceneSetup.cpp  SceneSetup.h  SetShCoefficients.cpp  SetShCoefficients.h  SetUniforms.cpp  SetUniforms.h  (+14 more)
molecular/gfx/glfw/: CMakeLists.txt  GlfwContext.cpp  GlfwContext.h  GlfwFileLoader.h  GlfwOpenGlWindow.cpp  GlfwOpenGlWindow.h  GlfwPrerequisites.h  GlfwRenderManager.cpp  GlfwRenderManager.h  GlfwVulkanWindow.cpp  GlfwVulkanWindow.h  GlfwWindow.h
molecular/gfx/opengl/: Egl.cpp  Egl.h  GlCommandSink.cpp  GlCommandSink.h  GlCommandSinkProgram.cpp  GlCommandSinkProgram.h  GlConstantString.cpp  GlConstantString.h  GlConstants.h  GlFunctions.h  GlFunctionsGl10Native.h  GlFunctionsGles2Native.h  GlFunctionsGles2ProcAddresses.h  GlFunctionsNative.h  GlFunctionsProcAddresses.h  Glx.cpp  Glx.h  OpenGlPrerequisites.h  PixelFormatConversion.cpp  PixelFormatConversion.h
molecular/gfx/vulkan/: VulkanInfrastructure.cpp  VulkanInfrastructure.h  VulkanRenderCmdSink.cpp  VulkanRenderCmdSink.h  VulkanRenderCmdSinkProgram.cpp  VulkanRenderCmdSinkProgram.h
molecular/util/: AssetManager.h  AtomicCounter.h  AttributeInfo.cpp  AttributeInfo.h  Blob.h  BlobFunctionTask.h  Box.cpp  Box.h  DdsFile.cpp  DdsFile.h  DummyFileLoader.h  DynamicScoping.h  FileServer.h  FileStreamStorage.cpp  FileStreamStorage.h  FileTypeIdentification.cpp  FileTypeIdentification.h  FontAtlasDescriptionFile.h  Frustum.cpp  Frustum.h  GcdAsyncFileLoader.h  GcdTaskDispatcher.cpp  GcdTaskDispatcher.h  HostStream.h  IniFile.cpp  IniFile.h  IteratorAdapters.h  KtxFile.cpp  KtxFile.h  LittleEndianStream.h  Logging.cpp  Logging.h  ManualTaskQueue.h  MemoryStreamStorage.cpp  MemoryStreamStorage.h  MtlFile.cpp  MtlFile.h  NmbFile.h  NonCopyable.h  PackageFile.h  (+27 more)
tests/: CMakeLists.txt  DdsTestData.cpp  DdsTestData.h  KtxTestData.cpp  KtxTestData.h  TestBox.cpp  TestDdsFile.cpp  TestFileTypeIdentification.cpp  TestFrustum.cpp  TestIniFile.cpp  TestIteratorAdapters.cpp  TestKtxFile.cpp  TestPlane.cpp  TestPlaneSet.cpp  TestQuaternion.cpp  TestStringStore.cpp  TestTgaFile.cpp  TgaTestData.cpp  TgaTestData.h
